--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,18 +1,624 @@
+$grey-text: #a0a0a0;
+$black: #000000;
+$black-AH: #3b3b3b;
+$white: #F7F7F9;
+
+.header-mobile {
+    position: fixed;
+    width: 100%;
+    z-index: 99;
+}
+
 .nav-link {
-    color: #F7F7F9;
+    color: $white;
+    cursor: pointer;
+
+    &:hover {
+        color: $grey-text;
+    }
+}
+
+.navigation--glow {
+    height: 200px;
+    background-color: #F7F7F9;
+    border-radius: 100%;
+    filter: blur(50px);
+    opacity: 0.6;
+    width: 50%;
+    position: absolute;
+    left: calc(25% );
+    top: -210px;
+}
+
+.navigation--hamburger {
+    display: none;
+    width: fit-content;
+    height: fit-content;
+    padding: 7px;
 }
 
 .home--wrapper {
-    height: 100vh;
-    background-image: linear-gradient(#1E1E1E, #000000);
+    height: 100%;
+    background-image: linear-gradient($black-AH, $black 60%);
+    padding-top: 72px;
 }
 
 .home--text {
     letter-spacing: 1px;
     padding-top: 1rem;
+    color: $grey-text;
+}
+
+.main-btn {
+    width: 150px;
+    height: 45px;
+
+    a {
+        color: $white;
+        text-decoration: none;
+
+        &:hover {
+            color: #212529;
+        }
+    }
+
+    &:hover > a {
+        color: #212529;
+    }
 }
 
 .btn {
-    min-width: 150px;
-    min-height: 45px;
+    border-radius: 5px;
 }
+
+.home--image {
+    width: 60%;
+    position: relative;
+    left: 30px;
+}
+
+.heading {
+    font-weight: 300;
+    line-height: 1.2;
+}
+
+.about--wrapper {
+    background: linear-gradient(rgb(30 30 30), rgb(67 67 67 / 25%));
+}
+
+.about--text {
+    color: $grey-text;
+}
+
+.about--content {
+    padding-bottom: 1.5rem;
+}
+
+.about--container_text {
+    margin-bottom: 0;
+}
+
+.about--container_small-text {
+    color: $grey-text;
+    font-size: 14px;
+    margin-bottom: 0;
+}
+
+.about--container {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.about--video {
+    position: absolute;
+    width: inherit;
+    top: 75px;
+}
+
+.about--video_glow {
+    width: 130%;
+    height: 125%;
+    position: absolute;
+    left: -20%;
+    top: -14%;
+    background: linear-gradient(180deg,rgba(0,0,0,1) 10%,rgba(11,11,15,0) 45%,rgba(0,0,0,0) 55%,rgba(0,0,0,1) 90%);
+    z-index: 1;
+}
+
+.about--video_container {
+    min-height: 400px;
+}
+
+.news--content {
+    background-color: $black-AH;
+}
+
+.news--content_date {
+    font-size: 0.9rem;
+    color: $grey-text;
+}
+
+.iframe {
+    width: 100%;
+    height: 100%;
+}
+
+.waitlist {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0, 0.9);
+}
+
+.waitlist--container {
+    position: relative;
+    top: calc(50% - 61px);
+    left: calc(50% - 250px);
+    width: 500px;
+    height: 200px;
+    background-color: $black-AH;
+    justify-content: center;
+}
+
+.waitlist--container > .p-3 > .main-btn {
+    width: 320px;
+
+    &:hover {
+        background-color: $white;
+    }
+}
+
+.waitlist--wrapper {
+    background: linear-gradient(rgb(30 30 30), rgb(67 67 67 / 25%));
+}
+
+.waitlist--input {
+    background-color: $black-AH;
+    width: 320px;
+    border-left: 0 solid $black;
+    border-top: 0 solid $black;
+    border-right: 0 solid $black;
+    border-bottom: 1px solid #a0a0a0;
+    padding-left: 1rem;
+    color: white;
+    height: 45px;
+
+    &:focus-visible {
+        border-radius: 0;
+    }
+}
+
+.roadmap {
+    &-quarter {
+        width: 35px;
+        height: 35px;
+        background-color: #3b3b3b;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+    }
+
+    &-horizontal {
+        height: 20px;
+        border-radius: 20px;
+    }
+
+    &-date {
+        position: absolute;
+        top: 22px;
+    }
+
+    &-1 {
+        background-color: #d0d0d0;
+    }
+
+    &-2 {
+        background-color: #828282;
+    }
+
+    &-3 {
+        background-color: #3b3b3b;
+    }
+
+    &-y2 {
+        position: absolute;
+        width: 100%;
+        left: 0;
+    }
+
+    &-plan {
+        position: relative;
+        top: -50px;
+        width: max-content;
+        margin-bottom: 1rem;
+
+        &_heading {
+            font-size: 13px;
+            font-weight: 600;
+        }
+    
+        &_text {
+            font-size: 12px;
+            margin-bottom: 0;
+            color: $grey-text;
+        }
+    }
+
+    &-line {
+        height: 50px;
+        position: relative;
+        top: -50px;
+        border-left: 1px solid #ffffff;
+        order: -1;
+    }
+
+    &-v {
+        display: none;
+    }
+
+    &-vertical {
+        width: 20px;
+        border-radius: 20px;
+
+        &-line {
+            width: 50px;
+            border-top: 1px solid #ffffff;
+            position: relative;
+            top: 17.5px;
+        }
+
+        &-plan {
+            position: relative;
+            top: 8px;
+        }
+
+        &-container {
+            position: relative;
+            left: 53px;
+        }
+
+        &-1 {
+            height: 150px;
+            background-color: #d0d0d0;
+        }
+    
+        &-2 {
+            height: 200px;
+            background-color: #828282;
+        }
+    
+        &-3 {
+            height: 350px;
+            background-color: #3b3b3b;
+        }
+    }
+}
+
+.q-position {
+    position: absolute;
+    top: -40px;
+}
+
+.q3 {
+    left: 42%;
+}
+
+.q4 {
+    right: 0;
+}
+
+.q6 {
+    left: calc(30% - 17px);
+}
+
+.q7 {
+    left: calc(65% - 17px);
+}
+
+.q8 {
+    right: 0;
+}
+
+.team--wrapper {
+    padding: 1rem 1rem;
+    background: linear-gradient(#1e1e1e, rgba(67, 67, 67, 0.25));
+}
+
+.team--image {
+    width: 100%;
+    filter: grayscale(50%);
+}
+
+.team--text {
+    font-size: 0.9rem;
+    margin-bottom: 0;
+    color: #a0a0a0;
+    margin-top: 1rem;
+}
+
+.footer--container {
+    min-height: 400px;
+    display: flex;
+    align-items: end;
+
+    .row {
+        width: 100%;
+    }
+}
+
+.footer--small-text {
+    margin-top: 1rem;
+    font-size: 0.8rem;
+    color: $grey-text;
+}
+
+.footer--links {
+    padding-left: 0;
+    list-style: none;
+
+    a {
+        margin-bottom: 0.5rem;
+        font-size: 0.8rem;
+        color: $grey-text;
+
+        &:hover {
+            color: $white;
+            cursor: pointer;
+        }
+    }
+}
+
+.footer--input {
+    background-color: #000000;
+    border: none;
+    border-bottom: 1px solid white;
+    font-size: 0.9rem;
+    color: #a0a0a0;
+    min-width: 400px;
+    min-height: 40px;
+}
+
+.footer--newsletter {
+    flex-direction: column;
+}
+
+.footer--copyright {
+    margin-top: 1rem;
+    font-size: 0.8rem;
+    color: $grey-text;
+    text-align: center;
+}
+
+.divider {
+    height: 100px;
+}
+
+// For tables and mobile screens
+@media (max-width: 768px) {
+    .header-mobile {
+        overflow: hidden;
+        position: relative;
+    }
+
+    .navigation--logo {
+        position: absolute;
+    }
+
+    .navigation--menu {
+        position: absolute;
+        top: 54px;
+        width: 100%;
+        padding: 0 0 0 0;
+        justify-content: center !important;
+        display: block;
+    }
+
+    .navigation--connect-wallet {
+        padding-right: 16px;
+    }
+
+    .navigation--hamburger {
+        display: block;
+    }
+
+    .roadmap-v {
+        display: block;
+
+        .row {
+            justify-content: center;
+        }
+    }
+
+    .roadmap-h {
+        display: none;
+    }
+}
+
+@media (max-width: 565px) {
+    .waitlist--input {
+        min-width: fit-content;
+    }
+
+    .footer--input {
+        min-width: fit-content;
+    }
+
+    .footer--newsletter {
+        margin-bottom: 4rem;
+    }
+
+    h1 {
+        font-size: 2rem;
+    }
+
+    .roadmap-v > .row {
+        justify-content: start;
+    }
+
+    .about--video_glow {
+        top: 26%;
+    }
+
+    .about--video {
+        position: relative;
+    }
+}
+
+@media (min-width: 565px) {
+    .left-0 {
+        left: 0;
+    }
+}
+
+@media (max-width: 372px) {
+    .roadmap-vertical-container {
+        left: 11px;
+    }
+
+    .roadmap-vertical-line {
+        width: 20px;
+    }
+}
+
+// animations
+.shake {
+    animation: shake 0.5s;
+}
+
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -1px) rotate(-1deg); }
+    20% { transform: translate(-2px, 0px) rotate(1deg); }
+    30% { transform: translate(2px, 1px) rotate(0deg); }
+    40% { transform: translate(0px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 1px) rotate(-1deg); }
+    60% { transform: translate(-2px, 1px) rotate(0deg); }
+    70% { transform: translate(2px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
+// .fade-in {
+//     animation: fade-in 1s;
+//     animation-delay: 0.25s;
+//     -webkit-animation: fade-in 1s;
+//     -webkit-animation-delay: 0.25s;
+// }
+
+// .slide-in-right {
+//     animation: slide-in-right 1s;
+//     animation-delay: 0.25s;
+//     -webkit-animation: slide-in-right 1s;
+//     -webkit-animation-delay: 0.25s;
+// }
+
+// .slide-in-left {
+//     animation: slide-in-left 1s;
+//     animation-delay: 0.25s;
+//     -webkit-animation: slide-in-left 1s;
+//     -webkit-animation-delay: 0.25s;
+// }
+
+//
+// @keyframes fade-in {
+//     0% {
+//         opacity: 0;
+//         transform: translate3d(0px, 15px, 0px) scale3d(1, 1, 1);
+//         transform-style: preserve-3d;
+//         transition-delay: 1s;
+//     }
+
+//     100% {
+//         opacity: 1;
+//         transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1);
+//         transform-style: preserve-3d;
+//         transition-delay: 1s;
+//     }
+// }
+
+// @-webkit-keyframes fade-in {
+//     0% {
+//         opacity: 0;
+//         transform: translate3d(0px, 15px, 0px) scale3d(1, 1, 1);
+//         transform-style: preserve-3d;
+//         transition-delay: 1s;
+//     }
+
+//     100% {
+//         opacity: 1;
+//         transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1);
+//         transform-style: preserve-3d;
+//         transition-delay: 1s;
+//     }
+// }
+
+// @keyframes slide-in-right {
+//     0% {
+//         opacity: 0;
+//         transform: translate3d(15px, 0px, 0px) scale3d(1, 1, 1);
+//         transform-style: preserve-3d;
+//         transition-delay: 1s;
+//     }
+
+//     100% {
+//         opacity: 1;
+//         transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1);
+//         transform-style: preserve-3d;
+//         transition-delay: 1s;
+//     }
+// }
+
+// @-webkit-keyframes slide-in-right {
+//     0% {
+//         opacity: 0;
+//         transform: translate3d(15px, 0px, 0px) scale3d(1, 1, 1);
+//         transform-style: preserve-3d;
+//         transition-delay: 1s;
+//     }
+
+//     100% {
+//         opacity: 1;
+//         transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1);
+//         transform-style: preserve-3d;
+//         transition-delay: 1s;
+//     }
+// }
+
+// @keyframes slide-in-left {
+//     0% {
+//         opacity: 0;
+//         transform: translate3d(15px, 0px, 0px) scale3d(1, 1, 1);
+//         transform-style: preserve-3d;
+//         transition-delay: 1s;
+//     }
+
+//     100% {
+//         opacity: 1;
+//         transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1);
+//         transform-style: preserve-3d;
+//         transition-delay: 1s;
+//     }
+// }
+
+// @-webkit-keyframes slide-in-left {
+//     0% {
+//         opacity: 0;
+//         transform: translate3d(15px, 0px, 0px) scale3d(1, 1, 1);
+//         transform-style: preserve-3d;
+//         transition-delay: 1s;
+//     }
+
+//     100% {
+//         opacity: 1;
+//         transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1);
+//         transform-style: preserve-3d;
+//         transition-delay: 1s;
+//     }
+// }
