--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -5,7 +5,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap');
 
 body {
-    background-color: #1E1E1E;
+    background-color: #000000;
     font-family: 'Rubik', sans-serif;
     color: #F7F7F9;
+}
+
+html {
+    scroll-behavior: smooth;
 }
