Mobile style fix and added google tracker

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -142,7 +142,7 @@
   <div class="container pb-5">
     <div class="row justify-content-around pb-4">
       <div class="col-sm-5 col-12 order-2 order-sm-1 d-flex flex-column justify-content-center" [@fade-in-left]="mvpState">
-        <img src="../assets/images/AlphaHuntsman laptop.png" alt="AlphaHuntsman invest">
+        <img src="../assets/images/AlphaHuntsman laptop.png" alt="AlphaHuntsman invest" class="MPV-laptop-image">
       </div>
       <div class="col-sm-5 col-12 order-1 order-sm-2 d-flex flex-column justify-content-center" [@fade-in]="mvpState">
         <h2 class="heading pb-3">Built for your enterprise</h2>
