--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -131,6 +131,10 @@ $white: #F7F7F9;
     min-height: 400px;
 }
 
+.MPV-laptop-image {
+    max-height: 208px;
+}
+
 .news--content {
     background-color: $black-AH;
 }
