--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
       <div class="row justify-content-between">
           <div class="col-lg-2 navigation--logo">
               <a href="/">
-                  <img src="../assets/images/logo.png" alt="Alpha Huntsman logo">
+                  <img src="../assets/images/logo.webp" alt="Alpha Huntsman logo" class="header-logo">
               </a>
           </div>
           <div class="col-lg-10 d-flex justify-content-end">
@@ -64,7 +64,7 @@
         </div>
     </div>
     <div class="container-fluid d-flex justify-content-center pt-5" id="chart-image" [@slide-in-text]="chartImageState" #chartImage>
-      <img class="home--image" src="../assets/images/Charts connected.png" alt="AlphaHuntsman firm level charts">
+      <img class="home--image" src="../assets/images/Charts connected.webp" alt="AlphaHuntsman firm level charts">
     </div>
 </div>
 <div class="about pb-5" id="about" #about>
@@ -130,7 +130,7 @@
       </div>
       <div class="col-sm-5 col-10">
         <div class="about--video_glow"></div>
-        <img src="../assets/images/AlphaHuntsman Benedetto.png" alt="AlphaHuntsman Benedetto analytics" class="about--video" [@fade-in]="videoState">
+        <img src="../assets/images/AlphaHuntsman Benedetto.webp" alt="AlphaHuntsman Benedetto analytics" class="about--video" [@fade-in]="videoState">
         <!-- <video class="about--video" autoplay loop [@fade-in]="videoState">
           <source src="../assets/video/Alpha Huntsman - Tracking the world one data point at the time.mp4" type="video/mp4">
         </video> -->
@@ -142,7 +142,7 @@
   <div class="container pb-5">
     <div class="row justify-content-around pb-4">
       <div class="col-sm-5 col-12 order-2 order-sm-1 d-flex flex-column justify-content-center" [@fade-in-left]="mvpState">
-        <img src="../assets/images/AlphaHuntsman laptop.png" alt="AlphaHuntsman invest" class="MPV-laptop-image">
+        <img src="../assets/images/AlphaHuntsman laptop.webp" alt="AlphaHuntsman invest" class="MPV-laptop-image">
       </div>
       <div class="col-sm-5 col-12 order-1 order-sm-2 d-flex flex-column justify-content-center" [@fade-in]="mvpState">
         <h2 class="heading pb-3">Built for your enterprise</h2>
@@ -411,7 +411,7 @@
     <div class="row">
       <div class="col-12 col-md-5">
         <div class="mb-4">
-          <img src="../assets/images/logo.png" alt="Alpha Huntsman logo">
+          <img src="../assets/images/logo.webp" alt="Alpha Huntsman logo">
           <p class="footer--small-text">Tracking the world one data at the time.</p>
         </div>
         <!-- <div class="d-flex footer--newsletter">
