--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,6 +9,10 @@ $white: #F7F7F9;
     z-index: 99;
 }
 
+.header-logo {
+    width: 162px;
+}
+
 .nav-link {
     color: $white;
     cursor: pointer;
