Updated logo width and height

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
       <div class="row justify-content-between">
           <div class="col-lg-2 navigation--logo">
               <a href="/">
-                  <img src="../assets/images/logo.webp" alt="Alpha Huntsman logo" class="header-logo">
+                  <img src="../assets/images/logo.webp" alt="Alpha Huntsman logo" class="logo-image">
               </a>
           </div>
           <div class="col-lg-10 d-flex justify-content-end">
@@ -411,7 +411,7 @@
     <div class="row">
       <div class="col-12 col-md-5">
         <div class="mb-4">
-          <img src="../assets/images/logo.webp" alt="Alpha Huntsman logo">
+          <img src="../assets/images/logo.webp" alt="Alpha Huntsman logo" class="logo-image">
           <p class="footer--small-text">Tracking the world one data at the time.</p>
         </div>
         <!-- <div class="d-flex footer--newsletter">
