Team and news section update

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,12 +25,12 @@
                   <li class="nav-item">
                     <a class="nav-link" (click)="scroll(roadmap)">Roadmap</a>
                   </li>
-                  <!-- <li class="nav-item">
+                  <li class="nav-item">
                     <a class="nav-link" (click)="scroll(news)">News</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" (click)="scroll(team)">Team</a>
-                  </li> -->
+                  </li>
                   <!-- <li class="nav-item">
                     <a class="nav-link" (click)="scroll(waitlist)">Waitlist</a>
                   </li> -->
@@ -299,9 +299,9 @@
 </div>
 <div class="divider">
 </div>
-<!-- <div class="news" id="news" #news #element4>
-  <div class="container pb-5">
-    <div class="row justify-content-center pb-4">
+<div class="news mt-5" id="news" #news #element4>
+  <div class="container pt-5">
+    <div class="row justify-content-center pb-5">
       <div class="col-8 text-center" [@slide-in-text]="newsState">
         <h1 class="heading">News</h1>
       </div>
@@ -309,38 +309,35 @@
     <div class="row pt-3" [@news-animation]="newsState">
       <div class="col-sm-4 col-12 d-flex flex-column justify-content-center">
         <div class="news--content p-3">
-          <iframe class="iframe" src="https://www.youtube.com/embed/vfOyPMgV_c8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="iframe" src="https://www.youtube.com/embed/M9wv9kYHNXA" title="AlphaHuntsman - whitepaper" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="mt-3 px-3">
-          <p class="mb-0">New partnership marks</p>
-          <p class="news--content_date">January 1, 2022</p>
+          <p class="mb-0">AlphaHuntsman - whitepaper</p>
+          <p class="news--content_date">March 16, 2022</p>
         </div>
       </div>
       <div class="col-sm-4 col-12 d-flex flex-column justify-content-center">
         <div class="news--content p-3">
-          <iframe class="iframe" src="https://www.youtube.com/embed/vfOyPMgV_c8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="iframe" src="https://www.youtube.com/embed/rJ8TKcqtd8Q" title="Alphahuntsman - Atlas" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="mt-3 px-3">
-          <p class="mb-0">New partnership marks</p>
-          <p class="news--content_date">January 1, 2022</p>
+          <p class="mb-0">Alphahuntsman - Atlas</p>
+          <p class="news--content_date">March 16, 2022</p>
         </div>
       </div>
       <div class="col-sm-4 col-12 d-flex flex-column justify-content-center">
         <div class="news--content p-3">
-          <iframe class="iframe" src="https://www.youtube.com/embed/vfOyPMgV_c8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
+          <iframe class="iframe" src="https://www.youtube.com/embed/qGO_69_Lf-o" title="Alphahuntsman - Benedetto" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        </div>
         <div class="mt-3 px-3">
-          <p class="mb-0">New partnership marks</p>
-          <p class="news--content_date">January 1, 2022</p>
+          <p class="mb-0">Alphahuntsman - Benedetto</p>
+          <p class="news--content_date">March 16, 2022</p>
         </div>
       </div>
     </div>
   </div>
 </div>
-<div class="divider">
-</div>
-<div class="team"  id="team" #team #element5>
-  <div class="container pb-5">
+<div class="team mt-5" id="team" #team #element5>
+  <div class="container pt-5">
     <div class="row justify-content-center">
       <div class="col-8 text-center pb-5" [@slide-in-text]="teamState">
         <h1 class="heading">Key team members</h1>
@@ -350,42 +347,31 @@
       <div class="col-sm-4 col-12">
         <div class="team--wrapper">
           <div class="team--image">
-            <img class="team--image" src="../assets/images/liutauras.jfif" alt="Liutauras P.">
+            <img class="team--image" src="../assets/images/Liutauras.webp" alt="Liutauras P.">
           </div>
           <div>
-            <p class="team--text">CEO</p>
-            <p>Liutauras P.</p>
+            <p class="team--text">Founder, CEO</p>
+            <p>Liutauras P., PhD</p>
           </div>
         </div>
       </div>
       <div class="col-sm-4 col-12">
         <div class="team--wrapper">
           <div class="team--image">
-            <img class="team--image" src="../assets/images/liutauras.jfif" alt="Liutauras P.">
+            <img class="team--image" src="../assets/images/Dominykas.webp" alt="Dominykas V.">
           </div>
           <div>
-            <p class="team--text">CEO</p>
-            <p>Liutauras P.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4 col-12">
-        <div class="team--wrapper">
-          <div class="team--image">
-            <img class="team--image" src="../assets/images/liutauras.jfif" alt="Liutauras P.">
-          </div>
-          <div>
-            <p class="team--text">CEO</p>
-            <p>Liutauras P.</p>
+            <p class="team--text">Co-founder, CTO</p>
+            <p>Dominykas V.</p>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div> -->
+</div>
 <!-- <div class="divider">
-</div> -->
-<!-- <div class="waitlist pb-5" id="waitlist" #waitlist #element6>
+</div>
+<div class="waitlist pb-5" id="waitlist" #waitlist #element6>
   <div class="container pt-5 waitlist--wrapper">
     <div class="row justify-content-center pb-5">
       <div class="col-8 text-center pb-5">
