--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -309,7 +309,7 @@
     <div class="row pt-3" [@news-animation]="newsState">
       <div class="col-sm-4 col-12 d-flex flex-column justify-content-center">
         <div class="news--content p-3">
-          <iframe class="iframe" src="https://www.youtube.com/embed/M9wv9kYHNXA" title="AlphaHuntsman - Whitepaper" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="iframe" src="https://www.youtube.com/embed/M9wv9kYHNXA" title="AlphaHuntsman - Whitepaper." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="mt-3 px-3">
           <p class="mb-0">AlphaHuntsman - Whitepaper</p>
