--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -323,15 +323,19 @@ $white: #F7F7F9;
 }
 
 .q6 {
-    left: calc(30% - 17px);
+    left: calc(26% - 17px);
 }
 
 .q7 {
-    left: calc(65% - 17px);
+    left: calc(50% - 17px);
 }
 
 .q8 {
-    right: 0;
+    left: calc(76% - 17px)
+}
+
+.r-15 {
+    right: 15px;
 }
 
 .team--wrapper {
