--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,7 +36,7 @@
                   </li> -->
                   <li class="nav-item">
                     <div class="navigation--connect-wallet">
-                      <button type="button" class="btn btn-outline-light" (click)="connectWallet()">Connect Wallet</button>
+                      <button type="button" class="btn btn-outline-light connect-wallet" (click)="connectWallet()">{{ account ? account : 'Connect Wallet' }}</button>
                     </div>
                   </li>
               </ul>
