--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -42,7 +42,7 @@ $white: #F7F7F9;
     padding: 7px;
 }
 
-.connect-wallet {
+.connect-wallet-button {
     white-space: nowrap;
     max-width: 140px;                   /* IE6 needs any width */
     overflow: hidden;              /* "overflow" value must be different from  visible"*/ 
@@ -361,6 +361,57 @@ $white: #F7F7F9;
     margin-bottom: 0;
     color: #a0a0a0;
     margin-top: 1rem;
+}
+
+.connect-wallet {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0, 0.9);
+
+    &--container {
+        position: relative;
+        top: calc(50% - 61px);
+        left: calc(50% - 250px);
+        width: 500px;
+        height: 200px;
+        background-color: $black-AH;
+        justify-content: center;
+        text-align: center;
+
+        &_link {
+            color: $grey-text;
+        }
+
+        &_icon {
+            width: 33px;
+            height: 33px;
+            background-color: white;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .main-btn {
+            width: 350px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+
+            img {
+                width: 24px;
+                height: 24px;
+            }
+        }
+
+        .logOut {
+            justify-content: center;
+        }
+    }
 }
 
 .footer--container {
