--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -148,6 +148,68 @@ $white: #F7F7F9;
     max-height: 250px;
 }
 
+.presale--wrapper {
+    background: linear-gradient(rgb(30 30 30), rgb(67 67 67 / 25%));
+    width: 700px;
+
+    &_text {
+        text-align: center;
+
+        p {
+            color: $grey-text;
+        }
+    }
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
+}
+
+.presale--form {
+    width: 550px;
+    margin: 0 auto;
+
+    &_input {
+        border-radius: 5px;
+        background-color: #111111;
+        width: 100%;
+        padding: 0.375rem 0.75rem;
+        color: $white;
+        border: 1px solid $white;
+    }
+
+    &_logo {
+        border: 1px solid $white;
+        border-radius: 5px;
+        margin: 0 0.5rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0 0.5rem;
+    }
+
+    &_icon {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+
+        &:hover {
+            background-color: $black-AH;
+        }
+    }
+}
+
 .news--content {
     background-color: $black-AH;
 }
@@ -202,7 +264,7 @@ $white: #F7F7F9;
     border-right: 0 solid $black;
     border-bottom: 1px solid #a0a0a0;
     padding-left: 1rem;
-    color: white;
+    color: $white;
     height: 45px;
 
     &:focus-visible {
@@ -271,7 +333,7 @@ $white: #F7F7F9;
         height: 50px;
         position: relative;
         top: -50px;
-        border-left: 1px solid #ffffff;
+        border-left: 1px solid $white;
         order: -1;
     }
 
@@ -285,7 +347,7 @@ $white: #F7F7F9;
 
         &-line {
             width: 50px;
-            border-top: 1px solid #ffffff;
+            border-top: 1px solid $white;
             position: relative;
             top: 17.5px;
         }
@@ -449,7 +511,7 @@ $white: #F7F7F9;
 .footer--input {
     background-color: #000000;
     border: none;
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid $white;
     font-size: 0.9rem;
     color: #a0a0a0;
     min-width: 400px;
